 + If bee target was placed in the dark area in a wrap world edge map, bee will first fly across border
 + Teach computer players how to use extra time
 * Fix hedgehogs being pushed around (and other collision bugs) when they overlap
 * Fix homing bee flying weird if passing wrap world edge or target was placed beyond it
 * Fix air mine not colliding with crates initially
 * Fix poison damage not working in first round
 * Use player-chosen team identity in campaigns and singleplayer missions
 * Fix player-chosen teams ignoring custom team controls in campaigns
 * Fix broken behaviour of airborne attacks when placed near bounce world edge
 * Fix crate sometimes collected twice when switching to hedgehog that touches it
 * Deny placement of airborne attack in “impossible” places in maps with bounce world edge
 * Deny placement of piano beyond bounce world edge
 * Fix laser sight not working properly when it starts out of map bounds
 * Fix parachute making hog stuck or fast when bumping into wall while looking other way
 * Add missing winner animation in single missions
 * Fix hog floating when switching to moving hog
 * Fix jump key not being ignored after placing girder or target
 * Explode hog instantly when taking damage while dying
 * Fix buggy hog when hog took damage during "idle" phase in kamikaze attack

Styles and schemes:
 + The Specialists: Unlock game scheme
 + The Specialists: Add script parameter support to set custom specialists order
 + Control, CTF_Blizzard: Display scores in stats screen
 + CTF_Blizzard: Various minor graphical and text improvements
 + Frenzy: Change ammo slots
 + Continental supplies: Show continent in team bars
 * Balanced Random Weapon: Fix Lua errors after using Time Box
 * Racer: Fix racer ghost not getting reset after a skip
 * Space Invasion: No longer allow to set start shield above shield limit
 * Battalion, WxW: Crates drop between turns, when appropriate
 * Battalion: Sudden Death effects are now like in the base game